--- a/src/main/resources/assets/bowtiers/lang/ru_ru.json
+++ b/src/main/resources/assets/bowtiers/lang/ru_ru.json
@@ -1,3 +1,9 @@
 {
-  "item.bowtiers.netherbow": "Адский лук"
+  "item.bowtiers.netherbow": "Адский лук",
+  "item.bowtiers.recurve": "Изогнутый лук",
+  "item.bowtiers.longbow": "Длинный лук",
+  "item.bowtiers.strongwood": "Крепкая палка",
+  "item.bowtiers.cotton_yarn": "Хлопковая нить",
+  "item.bowtiers.wither_yarn": "Увядающая пряжа",
+  "item.bowtiers.phantom_thread": "Фантомная нить"
 }
