--- a/src/main/resources/assets/bowtiers/lang/ru_ru.json
+++ b/src/main/resources/assets/bowtiers/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
-  "item.bowtiers.netherbow": "Адский лук",
+  "item.bowtiers.bow_haunted_bow": "Адский лук",
   "item.bowtiers.recurve": "Изогнутый лук",
   "item.bowtiers.longbow": "Длинный лук",
   "item.bowtiers.strongwood": "Крепкая палка",
